4 - update navbar position to fix

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">BCR</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -48,14 +48,14 @@
     <div class="main-section">
         <div class="container h-100 d-flex">
             <div class="row d-flex justify-content-center align-items-center">
-                <div class="col-md-6 tagline">
+                <div class="col-md-6 tagline mt-sm-5 mt-md-0">
                     <h2>sewa &amp; rental mobil terbaik dikawasan lokasimu</h2>
                     <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga
                         terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.
                     </p>
                     <a href="#" class="btn btn-success">Mulai Sewa Mobil</a>
                 </div>
-                <div class="col-md-6 rounded-circle d-flex justify-content-center align-items-center img-car">
+                <div class="col-md-6 d-flex justify-content-center align-items-center img-car">
                     <span></span>
                     <img src="./img/Mercedes Car EQC 300kW Edition - 900x598 1.png" alt="" class="w-100">
                 </div>
@@ -63,8 +63,8 @@
         </div>
     </div>
 
-    <div class="our-services my-5" id="our-services">
-        <div class="container">
+    <div class="our-services py-5" id="our-services">
+        <div class="container py-5">
             <div class="row">
                 <div class="col-md-6 d-flex justify-content-center align-items-center">
                     <img src="./img/img_service.png" alt="img_service">
@@ -85,8 +85,8 @@
         </div>
     </div>
 
-    <div class="why-us my-5" id="why-us">
-        <div class="container">
+    <div class="why-us py-5" id="why-us">
+        <div class="container py-5">
             <h3>Why Us?</h3>
             <p>Mengapa harus pilih Binar Car Rental?</p>
             <div class="row">
@@ -131,15 +131,15 @@
         </div>
     </div>
 
-    <div class="testimonial my-5" id="testimonial">
-        <div class="text-center">
+    <div class="testimonial py-5" id="testimonial">
+        <div class="text-center pt-3">
             <h3>Testimonial</h3>
             <p>Berbagai review positif dari para pelanggan kami</p>
         </div>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="container">
                 <div class="carousel-inner">
-                    <div class="carousel-item active py-3 p-md-5">
+                    <div class="carousel-item active py-3 p-md-4">
                         <div class="card p-5">
                             <div class="card-body p-0 py-md-5">
                                 <div class="row">
@@ -148,7 +148,8 @@
                                             alt="" class="rounded-circle img-thumbnail">
                                     </div>
                                     <div class="col-md-8 text-center text-md-start">
-                                        <div class="d-flex flex-row justify-content-center justify-content-md-start my-3">
+                                        <div
+                                            class="d-flex flex-row justify-content-center justify-content-md-start my-3">
                                             <i class="bi bi-star-fill me-1"></i>
                                             <i class="bi bi-star-fill me-1"></i>
                                             <i class="bi bi-star-fill me-1"></i>
@@ -166,7 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item py-3 p-md-5">
+                    <div class="carousel-item py-3 p-md-4">
                         <div class="card p-5">
                             <div class="card-body p-0 py-md-5">
                                 <div class="row">
@@ -175,7 +176,8 @@
                                             alt="" class="rounded-circle img-thumbnail">
                                     </div>
                                     <div class="col-md-8 text-center text-md-start">
-                                        <div class="d-flex flex-row justify-content-center justify-content-md-start my-3">
+                                        <div
+                                            class="d-flex flex-row justify-content-center justify-content-md-start my-3">
                                             <i class="bi bi-star-fill me-1"></i>
                                             <i class="bi bi-star-fill me-1"></i>
                                             <i class="bi bi-star-fill me-1"></i>
@@ -193,7 +195,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item py-3 p-md-5">
+                    <div class="carousel-item py-3 p-md-4">
                         <div class="card p-5">
                             <div class="card-body p-0 py-md-5">
                                 <div class="row">
@@ -202,7 +204,8 @@
                                             alt="" class="rounded-circle img-thumbnail">
                                     </div>
                                     <div class="col-md-8 text-center text-md-start">
-                                        <div class="d-flex flex-row justify-content-center justify-content-md-start my-3">
+                                        <div
+                                            class="d-flex flex-row justify-content-center justify-content-md-start my-3">
                                             <i class="bi bi-star-fill me-1"></i>
                                             <i class="bi bi-star-fill me-1"></i>
                                             <i class="bi bi-star-fill me-1"></i>
@@ -237,7 +240,7 @@
         </div>
     </div>
 
-    <div class="banner my-5">
+    <div class="banner py-5">
         <div class="container text-center py-5 d-flex justify-content-center align-items-center flex-column">
             <h1 class="fw-bold">Sewa Mobil di (Lokasimu) Sekarang</h1>
             <p class="w-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -247,8 +250,8 @@
         </div>
     </div>
 
-    <div class="faq my-5" id="faq">
-        <div class="container">
+    <div class="faq py-5" id="faq">
+        <div class="container py-5">
             <div class="row">
                 <div class="col-md-6">
                     <h3>Frequently Asked Question</h3>
@@ -257,11 +260,10 @@
                 <div class="col-md-6">
                     <div class="accordion accordion-flush" id="accordionFlushExample">
                         <div class="card mb-3">
-                            <div class="accordion-header cursor-pointer d-flex justify-content-between px-3 pt-3"
-                                class="accordion-button collapsed" data-bs-toggle="collapse"
-                                data-bs-target="#collapseButuh" aria-expanded="false" aria-controls="collapseButuh">
+                            <div class="accordion-header accordion-button collapsed cursor-pointer rounded"
+                                data-bs-toggle="collapse" data-bs-target="#collapseButuh" aria-expanded="false"
+                                aria-controls="collapseButuh">
                                 <p>Apa saja syarat yang dibutuhkan?</p>
-                                <i class="bi bi-chevron-down"></i>
                             </div>
                             <div id="collapseButuh" class="accordion-collapse collapse"
                                 aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -273,11 +275,10 @@
                             </div>
                         </div>
                         <div class="card mb-3">
-                            <div class="accordion-header cursor-pointer d-flex justify-content-between px-3 pt-3"
-                                class="accordion-button collapsed" data-bs-toggle="collapse"
-                                data-bs-target="#collapseKunci" aria-expanded="false" aria-controls="collapseKunci">
+                            <div class="accordion-header accordion-button collapsed cursor-pointer rounded"
+                                data-bs-toggle="collapse" data-bs-target="#collapseKunci" aria-expanded="false"
+                                aria-controls="collapseKunci">
                                 <p>Berapa hari minimal sewa mobil lepas kunci?</p>
-                                <i class="bi bi-chevron-down"></i>
                             </div>
                             <div id="collapseKunci" class="accordion-collapse collapse"
                                 aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -289,11 +290,10 @@
                             </div>
                         </div>
                         <div class="card mb-3">
-                            <div class="accordion-header cursor-pointer d-flex justify-content-between px-3 pt-3"
-                                class="accordion-button collapsed" data-bs-toggle="collapse"
-                                data-bs-target="#collapseSewa" aria-expanded="false" aria-controls="collapseSewa">
+                            <div class="accordion-header accordion-button collapsed cursor-pointer rounded"
+                                data-bs-toggle="collapse" data-bs-target="#collapseSewa" aria-expanded="false"
+                                aria-controls="collapseSewa">
                                 <p>Berapa hari sebelumnya sabaiknya booking sewa mobil?</p>
-                                <i class="bi bi-chevron-down"></i>
                             </div>
                             <div id="collapseSewa" class="accordion-collapse collapse"
                                 aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -305,11 +305,10 @@
                             </div>
                         </div>
                         <div class="card mb-3">
-                            <div class="accordion-header cursor-pointer d-flex justify-content-between px-3 pt-3"
-                                class="accordion-button collapsed" data-bs-toggle="collapse"
-                                data-bs-target="#collapseAntar" aria-expanded="false" aria-controls="collapseAntar">
+                            <div class="accordion-header accordion-button collapsed cursor-pointer rounded"
+                                data-bs-toggle="collapse" data-bs-target="#collapseAntar" aria-expanded="false"
+                                aria-controls="collapseAntar">
                                 <p>Apakah Ada biaya antar-jemput?</p>
-                                <i class="bi bi-chevron-down"></i>
                             </div>
                             <div id="collapseAntar" class="accordion-collapse collapse"
                                 aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -321,11 +320,10 @@
                             </div>
                         </div>
                         <div class="card mb-3">
-                            <div class="accordion-header cursor-pointer d-flex justify-content-between px-3 pt-3"
-                                class="accordion-button collapsed" data-bs-toggle="collapse"
-                                data-bs-target="#collapseCelaka" aria-expanded="false" aria-controls="collapseCelaka">
+                            <div class="accordion-header accordion-button collapsed cursor-pointer rounded"
+                                data-bs-toggle="collapse" data-bs-target="#collapseCelaka" aria-expanded="false"
+                                aria-controls="collapseCelaka">
                                 <p>Bagaimana jika terjadi kecelakaan?</p>
-                                <i class="bi bi-chevron-down"></i>
                             </div>
                             <div id="collapseCelaka" class="accordion-collapse collapse"
                                 aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -376,9 +374,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
 
     <script>
-        gsap.from('.main-section img', {duration: 3, x:100, opacity:0});
-        gsap.from('.main-section img', {duration: 3, y:100, opacity:0});
-        gsap.from('.main-section .tagline', {duration: 3, x:-100, opacity:0});
+        gsap.from('.main-section img', { duration: 3, x: 100, opacity: 0 });
+        gsap.from('.main-section span', { duration: 3, y: 100, opacity: 0 });
+        gsap.from('.main-section .tagline', { duration: 3, x: -100, opacity: 0 });
     </script>
 
     <!-- JavaScript Bundle with Popper -->
